Add keyholder status
